[project]
name = "imputed-multi-sectors"
description = ""
authors = [
    {name = "Jorge Rivera",email = "Jorge.Rivera@one.org"}
]
readme = "README.md"
requires-python = ">=3.10, <4.0"
dependencies = [
    "pandas (>=2.2.3,<3.0.0)",
    "oda-data (>=1.5.2,<2.0.0)"
]

[tool.poetry]
package-mode = false


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
